// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoanReasonField /> matches snapshot 1`] = `
<select
  class="sc-iqAbSa hSYmLs"
  id="loanReasonField"
  name="name"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz
  </option>
  <option
    value="bills"
  >
    rachunki
  </option>
  <option
    value="other_loans"
  >
    inne pożyczki
  </option>
  <option
    value="vacation"
  >
    wakacje
  </option>
  <option
    value="education"
  >
    edukacja
  </option>
  <option
    value="car"
  >
    samochód
  </option>
  <option
    value="medical_expenses"
  >
    wydatki zdrowotne
  </option>
  <option
    value="renovation"
  >
    renowacja
  </option>
  <option
    value="electronics"
  >
    elektronika
  </option>
  <option
    value="furniture"
  >
    meble
  </option>
  <option
    value="other"
  >
    inne
  </option>
  <option
    value="investment"
  >
    inwestycja
  </option>
  <option
    value="tax_payment"
  >
    spłata podatków
  </option>
</select>
`;

exports[`<LoanReasonField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd curuhY"
    >
      <label
        for="name"
      >
        Test
      </label>
      <select
        class="sc-iqAbSa hSYmLs"
        id="loanReasonField"
        label="Test"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz
        </option>
        <option
          value="bills"
        >
          rachunki
        </option>
        <option
          value="other_loans"
        >
          inne pożyczki
        </option>
        <option
          value="vacation"
        >
          wakacje
        </option>
        <option
          value="education"
        >
          edukacja
        </option>
        <option
          value="car"
        >
          samochód
        </option>
        <option
          value="medical_expenses"
        >
          wydatki zdrowotne
        </option>
        <option
          value="renovation"
        >
          renowacja
        </option>
        <option
          value="electronics"
        >
          elektronika
        </option>
        <option
          value="furniture"
        >
          meble
        </option>
        <option
          value="other"
        >
          inne
        </option>
        <option
          value="investment"
        >
          inwestycja
        </option>
        <option
          value="tax_payment"
        >
          spłata podatków
        </option>
      </select>
    </div>
  </form>
</div>
`;
